--- a/memecoins/index.html
+++ b/memecoins/index.html
@@ -180,7 +180,7 @@ Publicerat i <a href="https://lastoffer.net/category/investeringar/">investering
 </div>
 </div>
 <div class="row">
-<div class="cell right"><img fetchpriority="high" decoding="async" src="../media/2025/01/memecoins..webp" alt="Memcoins" width="300" height="300" /></div>
+<div class="cell right"><img fetchpriority="high" decoding="async" src="../media/2025/01/memecoins.webp" alt="Memcoins" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <div class="cell">
