--- a/mikrolan/index.html
+++ b/mikrolan/index.html
@@ -167,7 +167,7 @@ Publicerat i <a href="https://lastoffer.net/category/utan-uc/">Utan UC</a>		</sp
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2015/04/mikrolan-utan-uc..webp" alt="Mikrolån utan uc" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2015/04/mikrolan-utan-uc.webp" alt="Mikrolån utan uc" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -831,7 +831,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <h2>
 <div class="unskew">Mikrolån utan UC: En räddning</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för Mikrolån utan UC"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för Mikrolån utan UC"></p>
 <p>Att navigera genom ekonomiska utmaningar kan ofta kännas överväldigande, särskilt när oväntade utgifter plötsligt dyker upp.  Många av oss har befunnit oss i situationer där vi snabbt behöver pengar men inget alternativ verkar tillgängligt. </p>
 <blockquote><p>Snabb tillgång till kapital kan vara avgörande för att övervinna ekonomiska hinder. </p></blockquote>
 <p> Mikrolån utan UC erbjuder en praktisk och effektiv väg att hantera dessa oförutsedda utgifter utan att påverka din kreditvärdighet negativt. </p>
@@ -1003,7 +1003,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med mikrolån utan UC</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med Mikrolån utan UC"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med Mikrolån utan UC"></p>
 <ul>
 <li><strong>Snabb tillgång till kapital:</strong> Mikrolån utan UC erbjuder en snabb och effektiv lösning för akuta ekonomiska behov. Genom den smidiga ansökningsprocessen kan du ofta få besked inom några minuter och pengarna kan betalas ut samma dag.</li>
 <li><strong>Ingen kreditupplysning hos UC:</strong> Till skillnad från traditionella lån görs ingen kreditupplysning hos UC, vilket innebär att din kreditvärdighet förblir opåverkad. Detta är en stor fördel för dem som har en svag kreditprofil eller tidigare betalningsanmärkningar.</li>
@@ -1021,7 +1021,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med mikrolån utan UC</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med Mikrolån utan UC"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med Mikrolån utan UC"></p>
 <ul>
 <li><strong>Höga räntor:</strong> Mikrolån utan UC tenderar att ha högre räntor än traditionella lån. Detta kan leda till att kostnaden för lånet blir betydligt högre om det inte återbetalas inom utsatt tid.</li>
 <li><strong>Korta återbetalningstider:</strong> Många mikrolån kommer med korta återbetalningstider, vilket kan vara pressande för låntagaren. Denna begränsning kan göra det svårare att återbetala utan att behöva ta ytterligare lån.</li>
