--- a/minilan/index.html
+++ b/minilan/index.html
@@ -180,7 +180,7 @@ Minilån direkt utan UC innebär att du kan låna mindre belopp snabbt utan att 
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2017/07/minilan-utan-uc..webp" alt="Minilån direkt utan UC" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2017/07/minilan-utan-uc.webp" alt="Minilån direkt utan UC" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -886,7 +886,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <h2>
 <div class="unskew">Minilån för snabb ekonomisk lättnad</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för minilån utan UC"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för minilån utan UC"></p>
 <p><p>Att navigera i dagens ekonomiska landskap kan kännas överväldigande, särskilt när oväntade utgifter plötsligt dyker upp.  I sådana stunder kan det kännas som att man står vid ett vägskäl, där valet av finansiering kan göra stor skillnad. </p>
 <blockquote><p>Ekonomisk frihet är inte bara en dröm; det är en möjlighet</p></blockquote>
 <p> Minilån direkt utan UC erbjuder en lösning för den som behöver snabba likvida medel utan komplicerade formaliteter. </p>
@@ -984,7 +984,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med Minilån Utan UC</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med Minilån Utan UC"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med Minilån Utan UC"></p>
 <ul>
 <li>
         Snabb ansökningsprocess: Minilån utan UC erbjuder en ytterst smidig ansökningsprocess där du kan fylla i din ansökan online. Ofta får du besked inom några minuter, vilket gör det möjligt att snabbt lösa akuta ekonomiska problem.
@@ -1021,7 +1021,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med Minilån Utan UC</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med Minilån Utan UC"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med Minilån Utan UC"></p>
 <ul>
 <li>
         Höga räntor: Minilån utan UC har ofta högre räntor jämfört med traditionella lån. Detta beror på den större risken som långivarna tar när de erbjuder lån till låntagare med sämre kreditvärdighet.
