--- a/mobellan/index.html
+++ b/mobellan/index.html
@@ -179,7 +179,7 @@ Publicerat i <a href="https://lastoffer.net/category/lan/">lån</a>		</span>
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2024/08/mobellan..webp" alt="Möbellån" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2024/08/mobellan.webp" alt="Möbellån" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -685,7 +685,7 @@ button.bleu {
 <h2>
 <div class="unskew">Att få lån till möbler</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för Möbellån"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för Möbellån"></p>
 <p><p>Att inreda sitt hem är en konstform som många av oss brinner för.  Det handlar om att skapa en harmonisk miljö där stil och funktionalitet förenas.  Men att finansiera den perfekta soffan eller det eleganta matbordet kan kännas överväldigande, särskilt när prislapparna sticker iväg. </p>
 <p><p>I denna kontext framstår möbellån som en smidig lösning för dem som önskar förnya sin inredning utan att belasta sin ekonomi allt för mycket.  Med möjligheten att sprida ut kostnader över tid kan du fokusera mer på att välja rätt möbler snarare än att stressa över finanserna. </p>
 <p><p>Dessutom finns det ett brett spektrum av lånealternativ tillgängliga idag, vilket ger flexibilitet och kontroll i din ekonomiska situation.     </p>
@@ -745,7 +745,7 @@ button.bleu {
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med möbellån</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med möbellån"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med möbellån"></p>
 <ul>
 <li>
         <strong>Flexibilitet i återbetalning:</strong> Möbellån erbjuder ofta olika återbetalningsalternativ som gör det möjligt för låntagare att anpassa betalningarna efter sin ekonomiska situation. Detta innebär att du kan välja en plan som passar din livsstil och din månadsbudget.
@@ -783,7 +783,7 @@ button.bleu {
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med möbellån</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med möbellån"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med möbellån"></p>
 <ul>
 <li>
         <strong>Ränta och avgifter:</strong> Majoriteten av möbellån kommer med räntor som kan bli betydande över tid. Detta innebär att den totala kostnaden för dina möbler kan öka avsevärt om du inte planerar för återbetalningarna noggrant.
