--- a/nordea-snabblan/index.html
+++ b/nordea-snabblan/index.html
@@ -180,7 +180,7 @@ Publicerat i <a href="https://lastoffer.net/category/snabblan/">snabblån</a>		<
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2016/08/snabblan-nordea..webp" alt="Snabblån via Nordea" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2016/08/snabblan-nordea.webp" alt="Snabblån via Nordea" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -738,7 +738,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <h2>
 <div class="unskew">Snabblån: En lösning för dig</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för Snabblån hos Nordea"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för Snabblån hos Nordea"></p>
 <p><p>Att navigera i en alltmer komplex ekonomisk verklighet kan vara utmanande.  Många står inför oförutsedda utgifter som kräver snabba åtgärder.  Snabblån erbjuder en flexibilitet och snabbhet som många finner ovärderlig. </p>
 <blockquote><p>Ekonomi handlar inte bara om summor, utan om möjligheter och beslut</p></blockquote>
 <p> I den här stunden är det viktigt att vara välinformerad och vaksam. </p>
@@ -978,7 +978,7 @@ Innan du undertecknar något avtal, se till att läsa igenom villkoren noggrant.
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med Snabblån hos Nordea</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med Snabblån hos Nordea"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med Snabblån hos Nordea"></p>
 <ul>
 <li><strong>Snabb utbetalning:</strong> Snabblån via Nordea erbjuder en effektiv process där kunder kan få utbetalning på så lite som 15 minuter. Detta gör det möjligt för låntagare att snabbt hantera akuta ekonomiska behov.</li>
 <li><strong>Enkel ansökningsprocess:</strong> Ansökningsformuläret är utformat för att vara lättförståeligt och snabbt att fylla i. Det krävs endast grundläggande information som personnummer och bankkontouppgifter, vilket förenklar hela processen.</li>
@@ -996,7 +996,7 @@ Innan du undertecknar något avtal, se till att läsa igenom villkoren noggrant.
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med Snabblån hos Nordea</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med Snabblån hos Nordea"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med Snabblån hos Nordea"></p>
 <ul>
 <li><strong>Höga räntor:</strong> Snabblån tenderar att ha högre räntor än traditionella lån. Detta kan leda till en betydande kostnad över tid, särskilt om lånet inte återbetalas snabbt.</li>
 <li><strong>Kort återbetalningstid:</strong> De flesta snabblån har relativt korta återbetalningstider, vilket kan skapa press på låntagaren att betala tillbaka snabbt. Om man misslyckas med att betala i tid kan det resultera i ytterligare avgifter och räntor.</li>
