--- a/nystartslan/index.html
+++ b/nystartslan/index.html
@@ -179,7 +179,7 @@ Publicerat i <a href="https://lastoffer.net/category/samlingslan/">samlingslån<
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2024/08/nystartslan-1..webp" alt="Nystartslån" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2024/08/nystartslan-1.webp" alt="Nystartslån" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -685,7 +685,7 @@ button.bleu {
 <h2>
 <div class="unskew">Att få Nystartslån godkänt</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för Nystartslån"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för Nystartslån"></p>
 <p>Att bemöta ekonomiska utmaningar kan kännas överväldigande, men det finns möjligheter att återvinna kontrollen över sin ekonomi.  Genom att utforska alternativ som Nystartslån kan individer öppna dörrar till nya finansiella horisonter och återfå sin ekonomiska stabilitet. </p>
 <p>I livets svåraste stunder dyker det ofta upp oväntade kostnader, som plötsliga reparationer eller arbetsförlust.  Här erbjuder Nystartslån en smart lösning för att samla flera skulder och försimpla den ekonomiska tillvaron. </p>
 <p> Genom att ha en enda ränta och en enhetlig betalningsplan kan man undvika stress och förvirring. Dessa lån är särskilt fördelaktiga för dem med diverse smålån och skulder med hög ränta, som <a href="https://lastoffer.net/snabblan/">snabblån</a> eller kreditkort. </p>
@@ -795,7 +795,7 @@ button.bleu {
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med nystartslån</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med nystartslån"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med nystartslån"></p>
 <ul>
 <li>
         Enkel konsolidering: Genom att samla flera skulder i ett enda nystartslån förenklas den ekonomiska situationen. Det blir mycket lättare att hålla reda på betalningar och undvika förseningsavgifter, vilket minskar stressen i vardagen.
@@ -833,7 +833,7 @@ button.bleu {
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med nystartslån</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med nystartslån"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med nystartslån"></p>
 <ul>
 <li>
         Högre totalkostnader: Även om nystartslån ofta erbjuder lägre månatliga betalningar, kan den totala kostnaden för lånet bli högre om det sträcker sig över en lång löptid. Detta kan leda till att låntagaren betalar mer i ränta än om de hade kvar sina ursprungliga lån.
