--- a/online-lan/index.html
+++ b/online-lan/index.html
@@ -180,7 +180,7 @@ Vi jämför online lån som erbjuder snabb och enkel tillgång till pengar via n
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2024/08/online-lan-1..webp" alt="Online lån" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2024/08/online-lan-1.webp" alt="Online lån" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -687,7 +687,7 @@ button.bleu {
 <h2>
 <div class="unskew">Snabb och smidig lånefinansiering</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för online lån"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för online lån"></p>
 <p><p>Vi är övertygade om att online lån är en oslagbar lösning om du söker en snabb och flexibel finansiering.  Dessa digitala <a href="https://lastoffer.net/lanelosningar/">finansieringslösningar</a> har revolutionerat lånemarknaden och erbjuder ett alternativ till traditionella banklösningar med en smidighet som få andra produkter kan mäta sig med. </p>
 <blockquote><p>Finansiering när du behöver det – snabbhet och bekvämlighet i ett</p></blockquote>
 <p>De flesta långivare erbjuder en rad olika typer av lån som är skräddarsydda för att möta diverse behov, vare sig det handlar om akut kapitalförsörjning eller långsiktiga investeringar. </p>
@@ -873,7 +873,7 @@ button.bleu {
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med online lån</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med online lån"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med online lån"></p>
 <ul>
 <li><strong>Snabb och enkel ansökningsprocess:</strong> Med online lån kan du enkelt fylla i en ansökan från ditt hem, vilket sparar tid och energi. De flesta långivare ger besked om lånet inom minuter, vilket gör processen mycket effektiv.</li>
 <li><strong>Bekvämlighet:</strong> Du kan ansöka om lån när som helst, vilket ger enastående flexibilitet. Om du arbetar långa timmar eller har hektiska scheman kan du genomföra ansökan på kvällar eller helger utan att behöva stå i kö.</li>
@@ -891,7 +891,7 @@ button.bleu {
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med online lån</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med online lån"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med online lån"></p>
 <ul>
 <li><strong>Höga räntor:</strong> Många online lån, särskilt snabblån, är förknippade med högre räntor än traditionella banklån. Detta kan leda till betydande kostnader om låntagarna inte är försiktiga med sina återbetalningar.</li>
 <li><strong>Dolda avgifter:</strong> Vissa långivare kan inkludera dolda avgifter i sina lånevillkor, såsom uppläggningsavgifter, som kan överraska låntagare. Det är viktigt att noggrant läsa igenom avtalen för att förstå hela kostnaden för lånet.</li>
