--- a/pensionar-60-70/index.html
+++ b/pensionar-60-70/index.html
@@ -178,7 +178,7 @@ Publicerat i <a href="https://lastoffer.net/category/lan/">lån</a>		</span>
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2019/04/pensionarslan-utan-sakerhet..webp" alt="Pensionärslån utan säkerhet i bostad" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2019/04/pensionarslan-utan-sakerhet.webp" alt="Pensionärslån utan säkerhet i bostad" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -842,7 +842,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <h2>
 <div class="unskew">Möjligheter med pensionärslån utan säkerhet</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för pensionärslån utan säkerhet"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för pensionärslån utan säkerhet"></p>
 <p><p>Att navigera i den ekonomiska djungeln som pensionär kan ofta kännas överväldigande.  Många känner sig begränsade av konventionella lånealternativ, särskilt när de inte äger en bostad. </p>
 <p> Men tänk om möjligheterna är större än du trott? </p>
 <blockquote><p>Det är aldrig för sent att ta kontroll över sin ekonomi</p></blockquote>
@@ -960,7 +960,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med pensionärslån utan säkerhet</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med pensionärslån utan säkerhet"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med pensionärslån utan säkerhet"></p>
 <ul>
 <li><strong>Ingen säkerhet krävs:</strong> Pensionärslån utan säkerhet ger dig möjlighet att låna utan att behöva använda din bostad som garanti. Detta minskar risken och gör det lättare för dem som inte äger fastighet att få tillgång till kapital.</li>
 <li><strong>Flexibel återbetalning:</strong> Många långivare erbjuder anpassningsbara återbetalningstider, vilket gör det enklare att hitta ett lån som passar din ekonomiska situation. Du kan välja en plan som gör att du känner dig trygg och kan hantera dina utgifter effektivt.</li>
@@ -978,7 +978,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med pensionärslån utan säkerhet</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med pensionärslån utan säkerhet"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med pensionärslån utan säkerhet"></p>
 <ul>
 <li><strong>Högre räntor:</strong> Lån utan säkerhet tenderar att ha högre räntor än lån som är kopplade till en fastighet. Detta kan leda till att de totala kostnaderna för lånet blir betydligt större över tid.</li>
 <li><strong>Begränsade lånebelopp:</strong> Trots att du kan låna utan säkerhet finns det oftast begränsningar för hur mycket du kan få. Pensionärer får vanligtvis låna ett lägre belopp jämfört med säkerställda lån, vilket kan vara otillräckligt för större utgifter.</li>
