--- a/privatlan/index.html
+++ b/privatlan/index.html
@@ -180,7 +180,7 @@ Publicerat i <a href="https://lastoffer.net/category/lan/">lån</a>		</span>
 </div>
 </div>
 <div class="row">
-<div class="cell right"><img fetchpriority="high" decoding="async" class="alignnone size-full wp-image-8414" src="../media/2013/09/jamfor-privatlan..webp" alt="Privatlån med låg ränta" width="300" height="300" /></div>
+<div class="cell right"><img fetchpriority="high" decoding="async" class="alignnone size-full wp-image-8414" src="../media/2013/09/jamfor-privatlan.webp" alt="Privatlån med låg ränta" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -688,7 +688,7 @@ button.bleu {
 </h2>
 </div>
 <div class="cell">
-<img decoding="async" style="float: left; padding: 10px; width: 50px; height: 55px;" src="../media/glodlampa..webp" alt="Förklaring privatlån" /></p>
+<img decoding="async" style="float: left; padding: 10px; width: 50px; height: 55px;" src="../media/glodlampa.webp" alt="Förklaring privatlån" /></p>
 <p>Det bästa privatlånet med låg ränta hittar man genom att jämföra lån. Jämförelser av lån kan hjälpa dig att hitta det mest fördelaktiga lånet för din ekonomiska situation. Det finns många olika faktorer att ta hansyn till som kan variera mellan olika lån, till exempel räntesats, avgifter, löptid och villkor.</p>
 <p>Genom att jämföra lån kan du hitta ett lån som passar dina behov och ger dig de bästa villkoren.</p>
 <p>Att välja ett felaktigt lån kan leda till högre kostnader och svårigheter att betala tillbaka lånet. Det kan också påverka kreditvärdigheten negativt om du inte kan betala tillbaka lånet i tid.</p>
