--- a/ranking-langivare/index.html
+++ b/ranking-langivare/index.html
@@ -179,7 +179,7 @@ Publicerat i <a href="https://lastoffer.net/category/lan/">lån</a>		</span>
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2024/08/Hogst-ranking-lan..webp" alt="Ranking långivare – lånen med högst ranking" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2024/08/Hogst-ranking-lan.webp" alt="Ranking långivare – lånen med högst ranking" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -799,7 +799,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <h2>
 <div class="unskew">Smart val av långivare</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för låneranking"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för låneranking"></p>
 <p><p>I dagens komplexa lånemarknad är <a href="https://lastoffer.net/hur-valjer-man-ratt-langivare/">val av långivare</a> en kritisk uppgift.  Att navigera genom erbjudanden kan vara utmanande, men med rätt verktyg kan du göra kloka och informerade beslut.   </p>
 <blockquote><p>Förberedelse är halva vägen till framgång</p></blockquote>
 <p>  Låneprodukter varierar kraftigt både i villkor och kostnader, vilket gör det väsentligt att jämföra alternativen.  En grundlig analys kan leda till betydande besparingar på lång sikt.   </p>
@@ -965,7 +965,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med ranking</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med låneranking"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med låneranking"></p>
 <ul>
 <li><strong>Förbättrad kostnadseffektivitet:</strong> Genom att noggrant jämföra lån kan du hitta de mest konkurrenskraftiga räntorna och avgifterna. Detta kan leda till betydande besparingar över tid, vilket gör ditt lån mer kostnadseffektivt.</li>
 <li><strong>Ökad transparens:</strong> Genom att rangordna långivare får du en tydlig översikt över vad varje lånealternativ erbjuder. Detta hjälper dig att förstå både fördelar och nackdelar med olika lån, vilket främjar informerade beslut.</li>
@@ -983,7 +983,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med ranking</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med Låneranking"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med Låneranking"></p>
 <ul>
 <li><strong>Kreditvärdighetskrav:</strong> Många långivare ställer strikta krav på kreditvärdighet, vilket kan utesluta potentiella låntagare med lägre betyg. Detta kan hindra individer från att få tillgång till nödvändiga lån för att hantera akuta eller oväntade utgifter.</li>
 <li><strong>Dolda avgifter:</strong> Vissa långivare kan inkludera dolda avgifter som inte alltid är tydliga vid första anblick. Dessa avgifter kan öka den totala kostnaden för lånet och leda till att du betalar mer än du initialt förväntat dig.</li>
