--- a/ranta/index.html
+++ b/ranta/index.html
@@ -178,7 +178,7 @@ Publicerat i <a href="https://lastoffer.net/category/hjalp-tips/">hjälp &amp; t
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2023/01/ranta-pa-lan..webp" alt="Ränta på lån" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2023/01/ranta-pa-lan.webp" alt="Ränta på lån" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 	
@@ -500,7 +500,7 @@ window.addEventListener(
 <h2>
 <div class="unskew">Räntans betydelse för ekonomisk framgång</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för ränta på lån"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för ränta på lån"></p>
 <p>   I en värld där varje finansiellt beslut bär potentialen att forma vår framtid, är frågan om <a href="">ränta på lån</a> av stor betydelse.  Att förstå räntans komplexitet ger låntagare en fördel i att fatta välgrundade beslut. </p>
 <blockquote><p>Räntor är inte bara priset på pengar; de är en vägledning i det finansiella landskapet</p></blockquote>
 <p>    Räntor, dessa avgörande procenttal, reflekterar inte bara kostnaden för lån utan också den underliggande riskbedömningen som långivare gör. </p>
@@ -618,7 +618,7 @@ window.addEventListener(
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Så drar man fördel av ränta</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med ränta på lån"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med ränta på lån"></p>
 <ul>
 <li><strong>Förbättrad kostnadsmedvetenhet:</strong> Genom att förstå räntor kan låntagare göra mer informerade val när de överväger olika lånealternativ. Detta leder till en tydligare bild av vad lånet verkligen kostar över tid.</li>
 <li><strong>Optimerad lånestruktur:</strong> Att kunna identifiera mellan nominell och effektiv ränta hjälper låntagare att välja lån som passar deras ekonomiska situation bäst. En medvetenhet om dessa skillnader kan resultera i betydande besparingar på lång sikt.</li>
@@ -636,7 +636,7 @@ window.addEventListener(
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar räntor</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med ränta på lån"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med ränta på lån"></p>
 <ul>
 <li><strong>Kostnaden för höga räntor:</strong> Låntagare med låg kreditvärdighet kan mötas av betydande räntor, vilket gör lån mycket dyrare. Detta kan leda till en skuldfälla där låntagarna får svårt att återbetala sina lån.</li>
 <li><strong>Komplexitet i låneprodukter:</strong> Många långivare erbjuder en mängd olika låneprodukter med varierande räntor och avgifter. Detta kan vara förvirrande för låntagare, vilket gör det svårt att fatta välinformerade beslut.</li>
