--- a/rantesankning-pa-lan/index.html
+++ b/rantesankning-pa-lan/index.html
@@ -179,7 +179,7 @@ Publicerat i <a href="https://lastoffer.net/category/lan/">lån</a>		</span>
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2023/05/rantesankning-lan..webp" alt="Räntesänkning på lån" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2023/05/rantesankning-lan.webp" alt="Räntesänkning på lån" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 	
@@ -503,7 +503,7 @@ window.addEventListener(
 <h2>
 <div class="unskew">Sänk dina räntor effektivt nu</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för räntesänkning på lån"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för räntesänkning på lån"></p>
 <p><p>Räntor kan kännas som en Labyrint av avgifter och villkor, men att förstå hur du kan sänka dem är avgörande för att optimera din ekonomi.  Genom en medveten strategi kan du erövra dina lån och öppna dörrarna till mer gynnsamma avtal. </p>
 <blockquote><p>Att sänka räntan är en konst som kräver insikt och förberedelse</p></blockquote>
 <p>När du förbättrar din kreditvärdighet och hanterar dina skulder effektivt framstår du som en pålitlig låntagare. </p>
@@ -641,7 +641,7 @@ window.addEventListener(
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med räntesänkning</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med räntesänkning"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med räntesänkning"></p>
 <ul>
 <li><strong>Förbättrad kreditvärdighet:</strong> Att sänka räntan på lån kan leda till en förbättrad kreditprofil. Genom att betala av skulder i tid och hålla en låg skuldsättningsgrad visar du långivare att du är en ansvarsfull låntagare.</li>
 <li><strong>Lägre månadskostnader:</strong> En sänkt ränta innebär att du betalar mindre varje månad, vilket ger mer utrymme i din budget. Detta kan vara särskilt värdefullt för att täcka andra nödvändiga utgifter eller spara för framtida investeringar.</li>
@@ -659,7 +659,7 @@ window.addEventListener(
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med räntesänkning</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med räntesänkning"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med räntesänkning"></p>
 <ul>
 <li><strong>Potentiella avgifter och kostnader:</strong> När du ansöker om lån, även med lägre räntor, kan det tillkomma olika avgifter. Uppläggningsavgifter och administrativa kostnader kan göra det utmanande att hitta den verkliga kostnaden för lånet.</li>
 <li><strong>Missad betalning påverkar kreditvärdigheten:</strong> Om du missar betalningar på ett lån kan detta snabbt försämra din kreditprofil. En dålig betalningshistorik kan leda till högre räntor och svårare förhandlingspositioner i framtiden.</li>
