--- a/rekommenderade-lan/index.html
+++ b/rekommenderade-lan/index.html
@@ -179,7 +179,7 @@ Publicerat i <a href="https://lastoffer.net/category/lan/">lån</a>		</span>
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2023/09/rekommenderade-lan-2..webp" alt="Rekommenderade lån – lånen som andra rekommenderar" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2023/09/rekommenderade-lan-2.webp" alt="Rekommenderade lån – lånen som andra rekommenderar" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -686,7 +686,7 @@ button.bleu {
 <h2>
 <div class="unskew">Rekommenderade lån för smarta val</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för rekommenderade lån"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för rekommenderade lån"></p>
 <p><p>Att navigera i lånesystemets komplexitet kan kännas överväldigande, men i en värld där ekonomi och välstånd står i fokus, är valet av rätt lån av avgörande betydelse.  </p>
 <blockquote><p>Det bästa lånet  är det som passar just dina unika behov</p></blockquote>
 <p> Med rätt information och vägledning kan du skräddarsy din finansiella lösning och göra kloka beslut. </p>
@@ -888,7 +888,7 @@ button.bleu {
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med rekommenderade lån</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med rekommenderade lån"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med rekommenderade lån"></p>
 <ul>
 <li><b>Konkurrenskraftiga räntor:</b> Rekommenderade lån erbjuder ofta lägre räntor som gör det mer fördelaktigt för låntagare. Genom att välja lån med låga räntor kan du spara pengar över tid och minska kostnaderna för lånet.</li>
 <li><b>Flexibla villkor:</b> Många långivare erbjuder flexibla villkor som kan anpassas efter dina specifika behov. Detta möjliggör att du kan skräddarsy avtalet så att det passar din ekonomiska situation och återbetalningsförmåga.</li>
@@ -906,7 +906,7 @@ button.bleu {
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med rekommenderade lån</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med rekommenderade lån"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med rekommenderade lån"></p>
 <ul>
 <li><b>Höga räntor på snabblån:</b> Snabblån kan ha avsevärt högre räntor jämfört med traditionella lån. Denna kostnad kan snabbt bli överväldigande och göra det svårt att återbetala lånet i tid.</li>
 <li><b>Dolda avgifter:</b> Vissa långivare kan dölja extra avgifter som inte framgår tydligt vid låneansökan. Detta kan leda till förvånande kostnader som belastar din ekonomi och påverkar lånets totalbelopp.</li>
