--- a/renoveringslan/index.html
+++ b/renoveringslan/index.html
@@ -179,7 +179,7 @@ Publicerat i <a href="https://lastoffer.net/category/lan/">lån</a>		</span>
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2023/09/renoveringslan-1..webp" alt="Renoveringslån" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2023/09/renoveringslan-1.webp" alt="Renoveringslån" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -685,7 +685,7 @@ button.bleu {
 <h2>
 <div class="unskew">Att få renoveringslån</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring: Renoveringslån"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring: Renoveringslån"></p>
 <p>  Att förbättra och förnya sitt hem kan vara en av de mest givande investeringarna man kan göra.  Oavsett om det handlar om att fräscha upp ett rum, bygga till ett nytt utrymme eller renovera en gammal struktur, ligger nyckeln ofta i rätt finansiering. </p>
 <p> Det är här renoveringslån kommer in i bilden, som en plattform för att förverkliga dina visioner.   Många husägare drömmer om att återskapa sitt hem till sin forna glans eller anpassa det efter moderna behov. </p>
 <p> Med hjälp av ett renoveringslån kan dessa ambitiösa projekt bli verklighet utan att tvinga dig att tömma sparkontot.  Att investera i renovering är mer än bara estetik; det ökar även värdet på din fastighet. </p>
@@ -769,7 +769,7 @@ button.bleu {
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med renoveringslån</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Positivt med renoveringslån"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Positivt med renoveringslån"></p>
 <ul>
 <li>
         Lättillgänglig finansiering: Renoveringslån är ofta enklare att få än traditionella bolån och kan beviljas utan säkerhet. Detta gör det möjligt för fler att få tillgång till den finansiering de behöver för att genomföra sina renoveringsprojekt.
@@ -807,7 +807,7 @@ button.bleu {
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med renoveringslån</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Negativt med renoveringslån"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Negativt med renoveringslån"></p>
 <ul>
 <li>
         Högre räntor: Renoveringslån tenderar att ha högre räntor än traditionella bolån, vilket kan göra dem dyrare på lång sikt. Detta innebär att du kan komma att betala mer i totala räntekostnader, vilket påverkar din ekonomiska situation.
