--- a/sa-fungerar-kreditupplysning/index.html
+++ b/sa-fungerar-kreditupplysning/index.html
@@ -179,7 +179,7 @@ Publicerat i <a href="https://lastoffer.net/category/hjalp-tips/">hjälp &amp; t
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2022/11/sa-fungerar-en-kreditupplysning..webp" alt="Så fungerar en kreditupplysning" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2022/11/sa-fungerar-en-kreditupplysning.webp" alt="Så fungerar en kreditupplysning" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 	
@@ -501,7 +501,7 @@ window.addEventListener(
 <h2>
 <div class="unskew">Kreditupplysningens betydelse för din ekonomi</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för kreditupplysning"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för kreditupplysning"></p>
 <p><p>Att navigera genom den finansiella världen kan kännas överväldigande.  Många av oss har otaliga frågor kring hur vår kreditvärdighet bedöms och vilket inflytande det har över våra framtida ekonomiska möjligheter. </p>
 <blockquote><p>Kreditupplysning är en avgörande process för att förstå vår ekonomiska ställning</p></blockquote>
 <p>En kreditupplysning är mer än bara ett dokument; det är en kritisk analys av en individs finansiella hälsa. </p>
@@ -634,7 +634,7 @@ window.addEventListener(
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med kreditupplysning</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med kreditupplysning"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med kreditupplysning"></p>
 <ul>
 <li><strong>Förbättrad kreditvärdighet:</strong> En god kreditvärdighet kan leda till lägre räntor på lån och krediter. När du har en stark kreditprofil uppfattas du som en pålitlig låntagare av långivare, vilket ökar dina chanser till godkänt lån.</li>
 <li><strong>Ökad lånealternativ:</strong> Ju bättre din kreditvärdighet är, desto fler lånealternativ finns tillgängliga för dig. Det innebär att du kan välja låneprodukter som bäst passar dina ekonomiska behov och mål, utan att begränsas av ogynnsamma villkor.</li>
@@ -652,7 +652,7 @@ window.addEventListener(
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med kreditupplysning</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med kreditupplysning"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med kreditupplysning"></p>
 <ul>
 <li><strong>Negativ påverkan av betalningsanmärkningar:</strong> Betalningsanmärkningar kan ha en betydande negativ effekt på din kreditvärdighet. En enda anmärkning kan göra det svårt att få lån eller kredit, och om du lyckas få det beviljat kan det resultera i högre räntor.</li>
 <li><strong>Kostnader för kreditupplysningar:</strong> Att begära kreditupplysningar kan medföra kostnader, särskilt om detta görs genom tredjepartsföretag. Dessa kostnader kan ackumuleras över tid, vilket kan vara en börda för dem som ofta kontrollerar sin kreditinformation.</li>
