--- a/samla-lan/index.html
+++ b/samla-lan/index.html
@@ -179,7 +179,7 @@ Publicerat i <a href="https://lastoffer.net/category/samlingslan/">samlingslån<
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2021/07/samla-ihop-lan..webp" alt="Samla ihop lån" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2021/07/samla-ihop-lan.webp" alt="Samla ihop lån" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -686,7 +686,7 @@ button.bleu {
 <h2>
 <div class="unskew">Samla dina lån för frihet</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för samlingslånens syfte"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för samlingslånens syfte"></p>
 <p>Att navigera genom ett hav av skulder kan kännas som att simma motströms.  Många upplever idag påfrestningar med flera krediter och lån som tynger deras ekonomiska liv.  I denna komplexa värld är det aktuellt att finna vägar till befrielse, och en metod som vinner stort intresse är sammanslagning av lån. </p>
 <p>Det handlar om att få kontroll över sin ekonomi genom att samla sina skulder. </p>
 <blockquote><p>Att slå ihop dina lån till ett enda privatlån ger inte bara klarhet, utan kan även avsevärt minska dina månatliga kostnader.</p></blockquote>
@@ -826,7 +826,7 @@ button.bleu {
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med att Samla Lån</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med att Samla Lån"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med att Samla Lån"></p>
 <ul>
 <li>Enklare ekonomisk översikt: Genom att samla dina lån till ett enda lån får du en klarare bild av din ekonomiska situation. Detta gör att du lättare kan planera och budgetera för framtida utgifter.</li>
 <li>Lägre räntekostnader: Stora lån erbjuder ofta lägre räntor jämfört med mindre lån. Genom att samla dina smålån kan du spara pengar på lång sikt, då räntekostnaderna minskar.</li>
@@ -844,7 +844,7 @@ button.bleu {
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med att Samla Lån</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med att Samla Lån"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med att Samla Lån"></p>
 <ul>
 <li>Risk för att skulden ökar: När lån samlas till ett större lån kan det vara frestande att låna mer pengar än nödvändigt. Om du inte är försiktig kan detta leda till en ökning av din totala skuldbörda istället för en minskning.</li>
 <li>Ökade kostnader över tid: Även om månadsbetalningen kan bli lägre, kan en längre återbetalningstid resultera i högre totala kostnader. Räntekostnaderna kan lämnas oförändrade under en längre period, vilket innebär att du betalar mer totalt sett.</li>
