--- a/semesterlan/index.html
+++ b/semesterlan/index.html
@@ -181,7 +181,7 @@ Publicerat i <a href="https://lastoffer.net/category/lan/">lån</a>		</span>
 <div class="row">
 </div>
 <div class="row">
-<div class="cell right"><img fetchpriority="high" decoding="async" src="../media/2023/09/semesterlan..webp" alt="Semesterlån" width="300" height="300" /></div>
+<div class="cell right"><img fetchpriority="high" decoding="async" src="../media/2023/09/semesterlan.webp" alt="Semesterlån" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 	
@@ -864,7 +864,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="rw"></div>
 <div class="row">
 <div class="cell">
-<p><img decoding="async" style="width: 30px; height: 30px; margin: 5px; padding: 10px; background: #e8e8e8; border-radius: 100%/10px 10px 10px 10px;" src="../media/glodlampa..webp" alt="Förklaring: semesterlån" /></p>
+<p><img decoding="async" style="width: 30px; height: 30px; margin: 5px; padding: 10px; background: #e8e8e8; border-radius: 100%/10px 10px 10px 10px;" src="../media/glodlampa.webp" alt="Förklaring: semesterlån" /></p>
 <p>Drömmer du om att ligga på en solig strand, upptäcka vackra platser eller bara koppla av i en exotisk miljö? Men kanske håller din plånbok dig tillbaka från att förverkliga dina drömsemestrar? Oroa dig inte! Det är här semesterlån kommer in i bilden och öppnar dörrarna till dina drömmars resor.</p>
 <p>Ett semesterlån är din biljett till att skapa minnen för livet utan att behöva vänta åratal för att spara tillräckligt med pengar. Det här unika lånet ger dig möjlighet att uppfylla dina resedrömmar här och nu.</p>
 <p>Medan traditionella lån brukar användas för att finansiera stora investeringar som bostäder eller bilar, fyller semesterlån en helt annan funktion &#8211; de ger dig friheten att kartlägg världen utan att behöva tänka på din ekonomiska situation.</p>
