--- a/smarta-lan/index.html
+++ b/smarta-lan/index.html
@@ -179,7 +179,7 @@ Smarta lån är populära alternativ baserade på andra låntagares erfarenheter
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2023/09/smarta-lan-2..webp" alt="Smarta lån – låna smartare" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2023/09/smarta-lan-2.webp" alt="Smarta lån – låna smartare" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -699,7 +699,7 @@ button.bleu {
 <h2>
 <div class="unskew">Smarta lån för en ljus framtid</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för smarta lån"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för smarta lån"></p>
 <p><p>Ekonomi kan ofta kännas som en snårig djungel av valmöjligheter och krav.  För många är det en konstant kamp för att navigera genom lentiga lånevillkor och röriga räntor.  I denna utmanande värld framkommer dock en strålande lösning: smarta lån. </p>
 <blockquote><p>Att låna klokt är nyckeln till finansiell frihet</p></blockquote>
 <p>Med smarta lån blir det möjligt att omfamna en mer strategisk och välinformerad metod för finansiering.  Dessa innovativa lösningar är skapade för att ge låntagare verktyg att effektivisera sina skulder och maximera sina resurser. </p>
@@ -861,7 +861,7 @@ button.bleu {
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med smarta lån</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med smarta lån"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med smarta lån"></p>
 <ul>
 <li>Snabbare ansökningsprocess: Smarta lån erbjuder en effektiv och snabb ansökningsprocess som ofta kan genomföras online på bara några minuter. Detta är särskilt viktigt för dem som behöver pengar omedelbart för oväntade utgifter.</li>
 <li>Automatiska betalningar: Med många smarta lån får låntagare möjlighet att ställa in automatiska betalningar, vilket minimerar risken för förseningsavgifter och gör det enklare att hantera ekonomin. Detta system hjälper också till att bygga en starkare kreditvärdighet över tid.</li>
@@ -879,7 +879,7 @@ button.bleu {
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med smarta lån</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med smarta lån"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med smarta lån"></p>
 <ul>
 <li>Risk för överbelåning: En av de största nackdelarna med smarta lån är risken för överbelåning, där låntagare kan ta på sig mer skuld än de kan hantera. Detta kan leda till en nedåtgående spiral av finansiella problem och kan i värsta fall resultera i personlig konkurs.</li>
 <li>Variation i räntor: Smarta lån kan ha varierande räntor, vilket innebär att låntagare inte alltid kan förutse sina månatliga betalningar. En plötslig uppgång i räntan kan leda till oväntade kostnader och svårigheter att hålla sig inom budgeten.</li>
