--- a/sms-lan-svar-direkt/index.html
+++ b/sms-lan-svar-direkt/index.html
@@ -180,7 +180,7 @@ Publicerat i <a href="https://lastoffer.net/category/snabblan/">snabblån</a>		<
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2024/09/smslan-med-svar-direkt..webp" alt="Sms lån med svar direkt " width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2024/09/smslan-med-svar-direkt.webp" alt="Sms lån med svar direkt " width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -886,7 +886,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <h2>
 <div class="unskew">Snabba lösningar för akuta behov</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för Sms-lån Direkt"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för Sms-lån Direkt"></p>
 <p><p>I en värld där oväntade utgifter kan dyka upp när som helst, kan det kännas som en riktig utmaning att snabbt få tag på den nödvändiga kapitalet.  För många är SMS-lån en förlösande lösning som erbjuder chansen att hantera akuta behov med lätthet. </p>
 <blockquote><p>Snabbt, enkelt och effektivt &#8211; en lösning för alla dina ekonomiska kriser</p></blockquote>
 <p>Dessa snabblån gör det möjligt att få pengar på kontot inom kort tid, ofta inom bara några timmar.  Det är en lockande möjlighet för dem som behöver pengar omgående utan att behöva genomlida en långdragen process. </p>
@@ -1018,7 +1018,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med sms lån med svar direkt</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med Sms-lån Direkt"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med Sms-lån Direkt"></p>
 <ul>
 <li>
         Snabb utbetalning: SMS-lån erbjuds ofta med omedelbar utbetalning, vilket innebär att du kan få pengarna på ditt konto samma dag. Detta gör att du snabbt kan hantera oförutsedda utgifter utan att vänta i dagar.
@@ -1056,7 +1056,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med sms lån med svar direkt</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med Sms-lån Direkt"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med Sms-lån Direkt"></p>
 <ul>
 <li>
         Höga räntor: SMS-lån har ofta betydligt högre räntor än traditionella banklån och kan klassas som högkostnadskrediter. Detta innebär att låntagare kan få betala tillbaka betydligt mer än det belopp som ursprungligen lånades.
