--- a/snabb-utbetalning-av-lan/index.html
+++ b/snabb-utbetalning-av-lan/index.html
@@ -181,7 +181,7 @@ Publicerat i <a href="https://lastoffer.net/category/snabblan/">snabblån</a>		<
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2023/06/snabb-utbetalning-lan..webp" alt="Snabb utbetalning av lån" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2023/06/snabb-utbetalning-lan.webp" alt="Snabb utbetalning av lån" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -887,7 +887,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <h2>
 <div class="unskew">Behov av snabb finansiell hjälp</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för snabba låneutbetalningar"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för snabba låneutbetalningar"></p>
 <p><p>I en tid av osäkerhet och plötsliga utgifter är möjligheten till snabb finansiering mer värdefull än någonsin.  Många av oss har nog någon gång hamnat i en ekonomisk knipa där omedelbar likviditet är avgörande. </p>
 <blockquote><p>“Snabbhet är en nyckel till finansiell frihet</p></blockquote>
 <p> Att kunna få pengar på kontot inom en timme kan vara den skillnad som behövs för att hantera oförutsedda kostnader, vare sig det handlar om reparationer eller medicinska utgifter. </p>
@@ -1069,7 +1069,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med snabba låneutbetalningar</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med Snabba Låneutbetalningar"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med Snabba Låneutbetalningar"></p>
 <ul>
 <li><strong>Omedelbar tillgång till medel:</strong> Snabb utbetalning av lån innebär att du kan få pengarna på ditt konto inom en timme. Detta är särskilt användbart när du står inför oförutsedda utgifter som reparationer eller räkningar.</li>
 <li><strong>Enkel ansökningsprocess:</strong> Med digitala långivare kan du fylla i ansökan online utan krångliga pappersdokument. De flesta långivare erbjuder snabba och användarvänliga formulär som gör att processen går smidigt.</li>
@@ -1087,7 +1087,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med snabba lån</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med Snabba Lån"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med Snabba Lån"></p>
 <ul>
 <li><strong>Höga räntor:</strong> Snabblån har ofta mycket högre räntor än traditionella lån, vilket kan leda till betydande kostnader över tid. Detta kan göra det svårt att återbetala lånet, speciellt om lånet tas för en längre period.</li>
 <li><strong>Kortsiktiga lånetider:</strong> Många snabblån har korta återbetalningstider, vilket innebär att du snabbt måste betala tillbaka hela lånebeloppet. Detta kan skapa en pressad situation om du inte har en stabil ekonomisk plan.</li>
