--- a/snabblan-med-dalig-kreditvardighet/index.html
+++ b/snabblan-med-dalig-kreditvardighet/index.html
@@ -180,7 +180,7 @@ Publicerat i <a href="https://lastoffer.net/category/snabblan/">snabblån</a>		<
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2024/08/snabblan-dalig-kreditvardighet-1..webp" alt="Snabblån med dålig kreditvärdighet" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2024/08/snabblan-dalig-kreditvardighet-1.webp" alt="Snabblån med dålig kreditvärdighet" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -883,7 +883,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <h2>
 <div class="unskew">Att få lån med svag kreditvärdighet.</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för snabblån med låg kreditvärdighet."></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för snabblån med låg kreditvärdighet."></p>
 <p> Att sortera fram bäst erbjudande kan kännas svårt värre, särskilt när pengarna måste fram snabbt.  När oväntade utgifter uppstår kan ett snabblån med dålig kreditvärdighet framstå som en livboj. </p>
 <p> Dessa lån erbjuder ett snabbt sätt att få tillgång till kapital, men det är viktigt att vara medveten om de potentiella fallgroparna.     Många långivare är beredda att stödja dem med mindre än perfekt kreditpoäng, vilket kan ge viktiga möjligheter för att hantera akuta ekonomiska utmaningar. </p>
 <p> Att förstå detta lånealternativ är avgörande för de som står i behov av finansiell hjälp. Om man vill slippa strikta krav kan dessa snabblån erbjuda en mer flexibel väg till ekonomisk lättnad. </p>
@@ -988,7 +988,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med snabblån med dålig kreditvärdighet</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med snabblån med dålig kreditvärdighet"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med snabblån med dålig kreditvärdighet"></p>
 <ul>
 <li>Snabb tillgång till kapital: Snabblån med dålig kreditvärdighet ger dig möjlighet att snabbt få de pengar du behöver för akuta situationer, som exempelvis bilreparationer eller medicinska utgifter. Detta kan vara avgörande för att undvika större ekonomiska problem som kan uppstå om du inte åtgärdar dessa kostnader omedelbart.</li>
 <li>Inga omfattande kreditkontroller: Många långivare för snabblån använder alternativa kreditupplysningar, vilket innebär att traditionella kreditprövningar hos exempelvis UC inte alltid är nödvändiga. Detta ger dig en chans att få lån även om du har en svag kreditprofil.</li>
@@ -1006,7 +1006,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med snabblån med dålig kreditvärdighet</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med snabblån med dålig kreditvärdighet"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med snabblån med dålig kreditvärdighet"></p>
 <ul>
 <li>Höga räntor: Snabblån med dålig kreditvärdighet kommer ofta med betydligt högre räntor än traditionella lån. Detta beror på den ökade risken för långivaren, vilket innebär att om du inte kan återbetala lånet i tid kan den totala kostnaden snabbt bli mycket hög.</li>
 <li>Risk för överbelåning: Eftersom det är lätt att få snabblån kan det leda till att låntagare tar mer lån än de faktiskt har råd med. Detta kan resultera i en ond cirkel av skuld, vilket kan vara svårt att ta sig ur utan en tydlig återbetalningsplan.</li>
