--- a/snabblan-med-zimpler/index.html
+++ b/snabblan-med-zimpler/index.html
@@ -179,7 +179,7 @@ Publicerat i <a href="https://lastoffer.net/category/snabblan/">snabblån</a>		<
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2024/09/snabblan-med-zimpler..webp" alt="Snabblån med Zimpler" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2024/09/snabblan-med-zimpler.webp" alt="Snabblån med Zimpler" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -666,7 +666,7 @@ button.bleu {
 <h2>
 <div class="unskew">Snabba lån för akuta behov</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för snabblån med Zimpler"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för snabblån med Zimpler"></p>
 <p><p>Att navigera genom livets ekonomiska utmaningar kan ibland kännas överväldigande.  Men med rätt verktyg kan du snabbt finna lösningar på akuta behov av finansiering.  </p>
 <blockquote><p>En snabb lösning är ofta nyckeln till att återfå kontroll</p></blockquote>
 <p> Zimpler erbjuder en dynamisk plattform för snabblån som revolutionerar den svenska lånemarknaden. </p>
@@ -786,7 +786,7 @@ button.bleu {
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med Snabblån Zimpler</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med Snabblån Zimpler"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med Snabblån Zimpler"></p>
 <ul>
 <li><strong>Snabba utbetalningar:</strong> Med Zimpler kan du få pengar på ditt konto inom bara 15 minuter om du har konto hos större svenska banker. Denna hastighet innebär att du kan hantera oväntade utgifter utan att behöva vänta i dagar.</li>
 <li><strong>Tillgänglighet dygnet runt:</strong> Zimpler är tillgängligt 24/7, vilket innebär att du kan ansöka om lån och få utbetalningar när som helst. Detta är särskilt fördelaktigt för dem som behöver akuta lån under helger eller nätter.</li>
@@ -804,7 +804,7 @@ button.bleu {
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med Snabblån Zimpler</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med Snabblån Zimpler"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med Snabblån Zimpler"></p>
 <ul>
 <li><strong>Höga räntor:</strong> Snabblån via Zimpler kan ha högre räntor än traditionella banklån. Detta beror på den korta återbetalningstiden och riskfaktorerna som långivarna tar hänsyn till, vilket kan leda till en större total kostnad för lånet.</li>
 <li><strong>Kort återbetalningstid:</strong> Många snabblån kräver att låntagare betalar tillbaka lånet inom en relativt kort tidsram. Detta kan orsaka stress och press, särskilt för dem som kanske har begränsad ekonomisk flexibilitet.</li>
