--- a/snabblan-utan-uc/index.html
+++ b/snabblan-utan-uc/index.html
@@ -178,7 +178,7 @@ Publicerat i <a href="https://lastoffer.net/category/utan-uc/">Utan UC</a>		</sp
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2024/08/Snabblan-utan-UC..webp" alt="Snabblån utan uc" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2024/08/Snabblan-utan-UC.webp" alt="Snabblån utan uc" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -854,7 +854,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <h2>
 <div class="unskew">Att få snabblån utan UC snabbt</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för snabblån utan UC"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för snabblån utan UC"></p>
 <p>När livet överraskar oss med oväntade utgifter kan behovet av kontanta medel bli påtagligt.  Vi tycker att snabblån utan UC är en attraktiv lösning om du söker en enkel och snabb väg till finansiering utan att behöva genomgå en traditionell kreditupplysning. </p>
 <p> Många låntagare lockas av tanken på att kunna få pengar utan att deras kreditvärdighet påverkas negativt. Snabblån innebär att långivaren gör en bedömning av din ekonomiska situation och kreditvärdighet genom alternativa metoder, snarare än att förlita sig på klassiska kreditupplysningar. </p>
 <p> Detta öppnar dörrar för många som tidigare haft svårt att låna pengar, oavsett anledningen bakom deras kreditvärde.  Den snabba och smidiga ansökningsprocessen bidrar till ökad tillgänglighet. </p>
@@ -931,7 +931,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med snabblån utan UC</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med snabblån utan UC"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med snabblån utan UC"></p>
 <ul>
 <li>Snabb ansökningsprocess: Snabblån utan UC erbjuder en effektfull och snabb ansökningsprocess, oftast helt online. Detta gör det möjligt att få ett lånebesked inom några minuter, vilket kan vara avgörande när du står inför akuta ekonomiska behov.</li>
 <li>Ingen påverkan på kreditvärdigheten: Eftersom långivaren inte gör en kreditupplysning via UC, påverkas din kreditvärdighet inte av ansökan. Detta är särskilt fördelaktigt för dem som har en svagare kreditprofil och vill undvika ytterligare negativa upplysningar.</li>
@@ -949,7 +949,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med snabblån utan UC</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med snabblån utan UC"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med snabblån utan UC"></p>
 <ul>
 <li>Höga räntor: En av de mest betydande nackdelarna med snabblån utan UC är att räntorna ofta ligger på en mycket hög nivå. Detta kan leda till stora totala kostnader, särskilt om du inte kan återbetala lånet inom kort tid.</li>
 <li>Kort återbetalningstid: Snabblån har vanligtvis korta återbetalningstider, vilket kan skapa press på låntagaren att snabbt samla in tillräckligt med medel. Om du inte kan betala tillbaka i tid kan det leda till ytterligare skulder och avgifter.</li>
