--- a/snabblan/index.html
+++ b/snabblan/index.html
@@ -166,7 +166,7 @@ Publicerat i <a href="https://lastoffer.net/category/snabblan/">snabblån</a>		<
 </div>
 </div>
 <div class="row">
-<div class="cell right" ><img fetchpriority="high" decoding="async" class="alignnone size-full wp-image-9338" src="../media/2015/04/Snabblan-med-laga-krav..webp" alt="Snabblån med låga krav" width="300" height="300" /></div>
+<div class="cell right" ><img fetchpriority="high" decoding="async" class="alignnone size-full wp-image-9338" src="../media/2015/04/Snabblan-med-laga-krav.webp" alt="Snabblån med låga krav" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -872,7 +872,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 </h2>
 </div>
 <div class="cell">
-<p><img decoding="async" style="float: left; padding: 10px; width: 50px; height: 60px;" src="../media/glodlampa..webp" alt="Förklaring snabblån" /></p>
+<p><img decoding="async" style="float: left; padding: 10px; width: 50px; height: 60px;" src="../media/glodlampa.webp" alt="Förklaring snabblån" /></p>
 <p>Ett snabbt och enkelt lån kan trots att de ofta får mycket skäll för att vara dyra bli en välkommen räddare i nöden när det saknas alternativ. Det är just därför <strong>Snabblån</strong> med låga krav blivit så populära.</p>
 <p>Snabblån är en service som kostar lite extra men som för många är värd sitt pris när det behövs pengar snabbt.</p>
 <p>Det går att få ett mindre lån även om man har svagare kreditvärdighet eller dragit på sig en liten betalningsanmärkning</p>
@@ -1007,7 +1007,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar snabblån med låga krav</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Positiva egenskaper snabblån med låga krav"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Positiva egenskaper snabblån med låga krav"></p>
 <ol>
 <li><strong>Snabb tillgång till pengar:</strong> Med snabblån som har låga krav kan du snabbt få tillgång till de pengar du behöver, utan att behöva vänta länge eller krångla med pappersarbete. Perfekt för när oväntade utgifter dyker upp och du behöver en omedelbar lösning.</li>
 <li><strong>Enkel och smidig ansökan:</strong> Här slipper du långa och komplicerade ansökningsprocesser. Med färre krav går det snabbt och enkelt att ansöka, och du kan ofta göra det direkt från din dator eller mobil.</li>
@@ -1025,7 +1025,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar snabblån med låga krav</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Negativa egenskaper snabblån med låga krav"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Negativa egenskaper snabblån med låga krav"></p>
 <ol>
 <li><strong>Högre räntor:</strong> Snabblån med låga krav kommer ofta med högre räntor jämfört med traditionella lån. Detta innebär att du kan få betala betydligt mer i slutändan, vilket gör lånet dyrare än du kanske först räknat med.</li>
 <li><strong>Kort återbetalningstid:</strong> Snabblån kräver ofta att du betalar tillbaka lånet inom en mycket kort tidsperiod. Detta kan sätta press på din ekonomi och öka risken för att du inte hinner samla ihop pengarna i tid.</li>
