--- a/solcellslan/index.html
+++ b/solcellslan/index.html
@@ -177,7 +177,7 @@ Publicerat i <a href="https://lastoffer.net/category/lan/">lån</a>		</span>
 </div>
 </div>
 <div class="row">
-<div class="cell right"><img fetchpriority="high" decoding="async" src="../media/2023/09/Solcellslan..webp" alt="Solcellslån" width="300" height="300" /></div>
+<div class="cell right"><img fetchpriority="high" decoding="async" src="../media/2023/09/Solcellslan.webp" alt="Solcellslån" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 	
@@ -659,7 +659,7 @@ button.bleu {
   }
 }</script> </p>
 <div class="row">
-<div class="cell"><img decoding="async" style="width: 30px;height: 30px;margin: 5px;padding: 10px;background: #e8e8e8;border-radius: 100%/10px 10px 10px 10px" src="../media/glodlampa..webp" alt="Förklaring: Solcellslån"></p>
+<div class="cell"><img decoding="async" style="width: 30px;height: 30px;margin: 5px;padding: 10px;background: #e8e8e8;border-radius: 100%/10px 10px 10px 10px" src="../media/glodlampa.webp" alt="Förklaring: Solcellslån"></p>
 <p>Välkommen till en hållbar framtid där traditionella energikällor ersätts av grön teknik! Solenergi slår flera flugor i en smäll genom att både göra en insats för klimatet genom att minska sin miljöpåverkan, samtidigt spara pengar på lång sikt och samtidigt göra en lönsam <a href="https://www.vattenfall.se/fokus/solceller/en-lonsam-investering/" rel="noopener" target="_blank">investering som höjer värdet</a> på fastigheten. </p>
 <p> Oavsett om det gäller ett hushåll eller ett företag, kan solpaneler erbjuda betydande fördelar.  Men, alla vet att en effektiv solcellsanläggning i topp kvalitet kan kosta en hel del.  Därför introduceras konceptet &#8221;Solcellslån&#8221;. </p>
 <p>Ett solcellslån är en ekonomisk hjälp till de modiga och framåtblickande människor som vill göra det rätta för planeten samt deras plånbok.  </p>
