--- a/sondagslan/index.html
+++ b/sondagslan/index.html
@@ -178,7 +178,7 @@ Publicerat i <a href="https://lastoffer.net/category/snabblan/">snabblån</a>		<
 </div>
 </div>
 <div class="row">
-<div class="cell right"><img fetchpriority="high" decoding="async" src="../media/2023/09/sondagslan..webp" alt="Söndagslån" width="300" height="300" /></div>
+<div class="cell right"><img fetchpriority="high" decoding="async" src="../media/2023/09/sondagslan.webp" alt="Söndagslån" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 	
@@ -732,7 +732,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
   }
 }</script> </p>
 <div class="row">
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring: Söndagslån"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring: Söndagslån"></p>
 <p>Tänk dig en plötslig oväntad utgift som dyker upp under helgen &#8211; kanske behöver <a href="https://lastoffer.net/akutlan/">ett omedelbart lån</a> för att beskosta en bilreparation eller betala för en nödsituation.  Bankerna är stängda och du har ingen chans att ordna med pengarna omedelbart. </p>
 <p>&#8217;Söndagslån&#8217; är en revolutionerande tjänst och en smart lösningar som gör det möjligt för dig att ansöka om och få lån i princip omedelbart, sju dagar i veckan.  Oavsett om det är helgdag, mitt i natten, eller till och med söndag, skapar denna tjänst en bro över den ekonomiska gapet, fram tills du kan reglera saker och ting på traditionellt vis. </p>
 </div>
