--- a/sparkonto-hog-ranta/index.html
+++ b/sparkonto-hog-ranta/index.html
@@ -148,7 +148,7 @@ Publicerat i <a href="https://lastoffer.net/category/spara/">spara</a>		</span>
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2024/09/sparkonto-med-hog-ranta..webp" alt="Sparkonto med hög ränta" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2024/09/sparkonto-med-hog-ranta.webp" alt="Sparkonto med hög ränta" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -521,7 +521,7 @@ window.addEventListener(
 <h2>
 <div class="unskew">Hitta ditt optimala sparkonto</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för högräntesparkonto"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för högräntesparkonto"></p>
 <p>  Är du trött på att se dina besparingar växa sakta, som mossa på stenen? I en tid där inflationen hotar att urholka din köpkraft är det av yttersta vikt att du letar efter smarta sparlösningar. </p>
 <blockquote><p>Den som inte planerar för framtiden planerar att misslyckas</p></blockquote>
 <p> Att använda ett sparkonto med hög ränta kan förändra din ekonomiska framtid radikalt och hjälpa dig att uppnå dina finansiella drömmar. </p>
@@ -720,7 +720,7 @@ window.addEventListener(
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med högräntesparkonto</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med högräntesparkonto"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med högräntesparkonto"></p>
 <ul>
 <li><strong>Stabil avkastning:</strong> Sparkonton med hög ränta erbjuder en förutsägbar och stabil avkastning, vilket gör det enklare att planera din ekonomi. Du vet exakt hur mycket du kommer att tjäna på dina besparingar under hela bindningstiden.</li>
 <li><strong>Skyddat kapital:</strong> Ditt kapital är skyddat upp till en viss nivå genom statlig insättningsgaranti. Detta ger en trygghet som andra investeringar, som aktier, oftast inte kan erbjuda.</li>
@@ -738,7 +738,7 @@ window.addEventListener(
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med högräntesparkonto</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med högräntesparkonto"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med högräntesparkonto"></p>
 <ul>
 <li><strong>Begränsad avkastning:</strong> Trots hög ränta kan avkastningen på sparkonton med hög ränta fortfarande vara lägre än vad du kan få genom investeringar i aktier eller fonder. Detta gör dem mindre attraktiva för investerare som söker aggressiv tillväxt av sitt kapital.</li>
 <li><strong>Inflationens påverkan:</strong> Även med en hög ränta kan sparkontots avkastning knappt täcka inflationen. Detta innebär att köpkraften för dina besparingar kan minska över tid, vilket är en betydande nackdel för långsiktigt sparande.</li>
