--- a/storst-chans-till-lan/index.html
+++ b/storst-chans-till-lan/index.html
@@ -179,7 +179,7 @@ Vi hjälper dig att hitta lån med <strong>störst chans att få låna pengar</s
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2023/08/storst-chans-lan..webp" alt="Störst chans att få låna pengar" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2023/08/storst-chans-lan.webp" alt="Störst chans att få låna pengar" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -885,7 +885,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <h2>
 <div class="unskew">Maximera dina lånechanser klokt.</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för att låna pengar"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för att låna pengar"></p>
 <p><p>Att navigera i lånedjungeln kan kännas överväldigande, särskilt när man står inför osäkerheter.  Hur kan man maximera sina chanser att få godkänt? I en tid präglad av finansiella utmaningar är kunskap och strategi avgörande för att driva på <a href="https://lastoffer.net/laneprocess/">låneprocessen</a>. </p>
 <blockquote><p>Den som förbereder sig väl skördar framgång</p></blockquote>
 <p>Genom att noggrant välja långivare och överväga alternativ som lån utan UC kan individen öppna dörrar till ekonomiska lösningar. </p>
@@ -1002,7 +1002,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Lån med högre chans</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelaktiga långivare"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelaktiga långivare"></p>
 <ul>
 <li><strong>Hög beviljandegrad:</strong> Långivare med hög beviljandegrad godkänner många ansökningar, vilket ökar dina chanser att få lån beviljat. Detta är särskilt fördelaktigt för dem med svag kreditvärdighet.</li>
 <li><strong>Snabb tillgång till pengar:</strong> Många långivare erbjuder snabblån som ger omedelbar tillgång till likvida medel. Detta kan vara avgörande när oväntade utgifter dyker upp och du snabbt behöver pengar.</li>
@@ -1020,7 +1020,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med lätta lån</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med lån med hög chans"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med lån med hög chans"></p>
 <ul>
 <li><strong>Höga räntor:</strong> Många långivare med hög beviljandegrad erbjuder lån med betydligt högre räntor. Detta kan leda till att den totala kostnaden för lånet blir mycket större än initialt förväntat.</li>
 <li><strong>Kortsiktiga lån:</strong> Sms-lån och andra snabblån har ofta korta återbetalningstider, vilket kan sätta press på din ekonomi. Om du inte kan återbetala i tid riskerar du ytterligare avgifter och skuldsättning.</li>
