--- a/swishlan/index.html
+++ b/swishlan/index.html
@@ -179,7 +179,7 @@ Publicerat i <a href="https://lastoffer.net/category/lan/">lån</a>		</span>
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2023/09/Swishlan-2..webp" alt="Swishlån" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2023/09/Swishlan-2.webp" alt="Swishlån" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -195,7 +195,7 @@ Publicerat i <a href="https://lastoffer.net/category/lan/">lån</a>		</span>
 <h2>
 <div class="unskew">Att få swishlån</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring: Swishlån"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring: Swishlån"></p>
 <p>Vi rekommenderar Swishlån om du behöver ett snabbt lån. Det är en nyskapande låneform som kommit att bli en eftertraktad lösning för dem som behöver omedelbar likviditet.  Denna låneform har möjlighet att revolutioner sättet vi lånar pengar, genom att göra det möjligt att få medel på kontot inom några minuter. </p>
 <p>    De flesta svenskar använder i dag Swish, en applikation som erbjuder en smidig plattform för pengaöverföringar.  Genom att kombinera denna praktiska tjänst med lånealternativ, kan användare dirigera sina finansiella behov med ett enkelt knapptryck. </p>
 <p> Just denna enkelhet har gjort swishlånet till ett sätt att hantera akuta utgifter utan krångel.     Många långivare har anpassat sina tjänster för att inkludera Swish som utbetalningsmetod, vilket drastiskt förenklar lånprocessen. </p>
@@ -296,7 +296,7 @@ Publicerat i <a href="https://lastoffer.net/category/lan/">lån</a>		</span>
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med Swishlån</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Positivt med Swishlån"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Positivt med Swishlån"></p>
 <ul>
 <li><strong>Snabb och enkel ansökningsprocess:</strong> Att ansöka om ett Swishlån är en smidig och snabb process. Du kan göra det direkt via din smartphone, vilket eliminerar behovet av pappersjobb och besök på banken.</li>
 <li><strong>Omedelbara utbetalningar:</strong> En av de mest attraktiva aspekterna av Swishlån är att medlen ofta kan nå ditt konto på några minuter. Detta gör det möjligt att hantera plötsliga utgifter utan att behöva vänta på långdragna banköverföringar.</li>
@@ -314,7 +314,7 @@ Publicerat i <a href="https://lastoffer.net/category/lan/">lån</a>		</span>
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med Swishlån</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Negativt med Swishlån"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Negativt med Swishlån"></p>
 <ul>
 <li><strong>Högre räntor:</strong> Trots att Swishlån kan ha låg ränta för vissa, kan avgifterna och räntorna bli betydligt högre för låntagare med svag kreditvärdighet. Detta kan leda till att låntagaren hamnar i en ogynnsam finansiell situation om lånet inte hanteras klokt.</li>
 <li><strong>Risk för överbelåning:</strong> Den snabba och enkla processen att få ett Swishlån kan fresta låntagare att låna mer än de behöver. Detta kan resultera i en spiral av skulder, där det blir svårt att betala tillbaka lånen i tid.</li>
