--- a/ta-kontroll-over-skulder/index.html
+++ b/ta-kontroll-over-skulder/index.html
@@ -177,7 +177,7 @@ Publicerat i <a href="https://lastoffer.net/category/hjalp-tips/">hjälp &amp; t
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2023/05/ta-kontroll-over-skulder..webp" alt="Ta kontroll över skulder" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2023/05/ta-kontroll-over-skulder.webp" alt="Ta kontroll över skulder" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -506,7 +506,7 @@ window.addEventListener(
 <h2>
 <div class="unskew">Ta steget mot skuldfrihet.</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för Skuldhantering"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för Skuldhantering"></p>
 <p><p>Det känns ibland som om nya problem ständigt knackar på dörren, och nya skulder kännas som en ofrånkomlig börda.  Det här måste få ett stopp så att du att du kan ta kontroll över din privatekonomi. Det är faktiskt den enda lösningen för ett mer harmoniskt liv. </p>
 <blockquote><p>Ekonomi handlar om att skapa frihet, inte att fängsla sig själv</p></blockquote>
 <p> Genom att aktivt identifiera och prioritera skulder kan vi öppna dörrar till nya möjligheter. </p>
@@ -596,7 +596,7 @@ window.addEventListener(
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med att hantera skulder</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med att Hantera Skulder"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med att Hantera Skulder"></p>
 <ul>
 <li><strong>Ökad ekonomisk stabilitet:</strong> Genom att ta kontroll över skulder kan du skapa en stabil grund för din privatekonomi. Detta minskar risken för oväntade ekonomiska kriser och ger dig bättre förutsättningar för att planera din framtid.</li>
 <li><strong>Förbättrad kreditvärdighet:</strong> Att hantera och betala ner skulder bidrar till att förbättra din kreditvärdighet. En högre kreditvärdighet öppnar dörrar till bättre lånevillkor och lägre räntor i framtiden.</li>
@@ -614,7 +614,7 @@ window.addEventListener(
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med skuldkontroll</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med Skuldkontroll"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med Skuldkontroll"></p>
 <ul>
 <li><strong>Ökad stress vid skuldhantering:</strong> Att hantera skulder kan vara en betydande källa till stress och ångest. Den dagliga pressen att möta betalningar och rationera resurser kan leda till utmattning och påverka ditt mentala välbefinnande.</li>
 <li><strong>Begränsad livsstil:</strong> Skulder kan tvinga dig att göra avkall på nöjen och aktiviteter som ger livskvalitet. Du kanske måste avstå från resor, underhållning eller till och med grundläggande nöjen för att hålla en stram budget.</li>
