--- a/tillfalligt-lan/index.html
+++ b/tillfalligt-lan/index.html
@@ -887,7 +887,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <h2>
 <div class="unskew">Oväntade utgifter? Här är lösningen!</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för kortvariga lån"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för kortvariga lån"></p>
 <p><p>I en värld där oväntade utgifter kan dyka upp när som helst, är det avgörande att vara beredd.  Livet bjuder ofta på ekonomiska överraskningar som kan sätta press på vår plånbok.  Att ha tillgång till extra kapital vid sådana tillfällen ger en känsla av trygghet och kontroll. </p>
 <blockquote><p>Akuta finansiella behov kräver snabba och smarta lösningar</p></blockquote>
 <p>Tillfälliga lån erbjuder en flexibel lösning för att hantera akuta situationer, som en trasig bil eller oväntade medicinska kostnader. </p>
@@ -1036,7 +1036,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med tillfälliga lån</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med tillfälliga lån"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med tillfälliga lån"></p>
 <ul>
 <li>Snabb tillgång till pengar</li>
 <p>Tillfälliga lån erbjuder en snabblösning för akuta ekonomiska behov. Genom en smidig ansökningsprocess kan du få pengarna insatta på ditt konto samma dag, vilket gör att du kan hantera oförutsedda kostnader omedelbart.</p>
@@ -1064,7 +1064,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med tillfälliga lån</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med tillfälliga lån"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med tillfälliga lån"></p>
 <ul>
 <li>Höga räntor</li>
 <p>Tillfälliga lån har ofta högre räntor jämfört med traditionella lån, vilket kan leda till större totala kostnader. Om lånet inte återbetalas i tid kan räntan snabbt skena, vilket gör det svårt att hantera ekonomin.</p>
