--- a/trustlylan/index.html
+++ b/trustlylan/index.html
@@ -179,7 +179,7 @@ Publicerat i <a href="https://lastoffer.net/category/lan/">lån</a>		</span>
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2023/09/Trustlylan-2..webp" alt="Trustlylån" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2023/09/Trustlylan-2.webp" alt="Trustlylån" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -737,7 +737,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <h2>
 <div class="unskew">Snabb och säker låneupplevelse</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för Trustlylån"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för Trustlylån"></p>
 <p>    Trustlylån har begeistrat den finansiella världen med sin oöverträffade hastighet och bekvämlighet.  Genom denna innovativa tjänst kan du snabbt få tillgång till nödvändiga resurser utan onödig dröjsmål. </p>
 <blockquote><p>Snabbhet och säkerhet är nycklarna till en framgångsrik låneupplevelse.</p></blockquote>
 <p>     Den digitala plattformen som Trustly erbjuder förenklar processen avsevärt.  Istället för att genomgå tidskrävande och komplicerade procedurer kan du nu låna pengar med ett enkelt knapptryck, direkt från din mobil eller dator. </p>
@@ -941,7 +941,7 @@ Trustly-lån kan vara en utmärkt lösning för att hantera oväntade utgifter, 
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med Trustlylån</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med Trustlylån"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med Trustlylån"></p>
 <ul>
 <li><strong>Omedelbara utbetalningar:</strong> Trustlylån innebär att du får pengar på ditt konto direkt efter godkänd ansökan. Det eliminerar väntetiden och gör det möjligt att snabbt hantera akuta kostnader.</li>
 <li><strong>Bekväm digital ansökan:</strong> Ansökningsprocessen sker helt online, vilket gör det enkelt att låna pengar var du än befinner dig. Du kan utföra hela processen från din telefon eller dator, utan att behöva lämna hemmet.</li>
@@ -959,7 +959,7 @@ Trustly-lån kan vara en utmärkt lösning för att hantera oväntade utgifter, 
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med Trustlylån</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med Trustlylån"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med Trustlylån"></p>
 <ul>
 <li><strong>Höga räntor:</strong> Trustlylån kan ofta ha högre räntor jämfört med traditionella banklån. Detta beror på den snabba utbetalningen och den minskade risken som långivare tar, vilket kan leda till dyrare lånealternativ.</li>
 <li><strong>Kortsiktig finansiering:</strong> Många Trustlylån är avsedda för kortvarig finansiering, vilket kan innebära att låntagare ofta tvingas ta nya lån för att täcka gamla skulder. Detta kan skapa en ond cirkel av skuld som är svår att bryta.</li>
