--- a/vad-bestammer-rantan-pa-lan/index.html
+++ b/vad-bestammer-rantan-pa-lan/index.html
@@ -178,7 +178,7 @@ Publicerat i <a href="https://lastoffer.net/category/hjalp-tips/">hjälp &amp; t
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2023/05/vad-bestammer-rantan-pa-lan..webp" alt="Vad bestämmer räntan på lån?" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2023/05/vad-bestammer-rantan-pa-lan.webp" alt="Vad bestämmer räntan på lån?" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 	
@@ -500,7 +500,7 @@ window.addEventListener(
 <h2>
 <div class="unskew">Räntans hemligheter avslöjas här.</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för låneräntans faktorer"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för låneräntans faktorer"></p>
 <p><p>Att navigera i den ekonomiska världen kan ibland kännas som att vandra genom en djungel av begrepp och termer.  När det kommer till lån är en av de mest centrala aspekterna den ränta som långivaren erbjuder. </p>
 <blockquote><p>Räntan speglar den risk och kostnad som är knuten till att låna pengar</p></blockquote>
 <p> Att förstå vad som påverkar denna nyckelfaktor är avgörande för att maximera dina finanser och undvika obehagliga överraskningar. </p>
@@ -649,7 +649,7 @@ window.addEventListener(
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Så får man fördelaktiga låneräntor</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med låneräntor"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med låneräntor"></p>
 <ul>
 <li><strong>Lägre räntekostnader:</strong> En stark kreditvärdighet kan leda till lägre räntor på lån. Detta innebär att du sparar en betydande summa pengar över tid, vilket gör det mer ekonomiskt fördelaktigt att låna.</li>
 <li><strong>Ökad lånekapacitet:</strong> Genom att förstå vad som påverkar räntan, kan du effektivt öka din totala lånekapacitet. Ju bättre din kreditprofil är, desto mer kan långivare vara villiga att låna ut.</li>
@@ -667,7 +667,7 @@ window.addEventListener(
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Detta påverkar räntan negativt</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med låneräntor"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med låneräntor"></p>
 <ul>
 <li><strong>Höga räntekostnader:</strong> En låg kreditvärdighet kan resultera i betydligt högre räntor på lån. Detta kan öka de totala kostnaderna avsevärt och göra det svårare att återbetala lånen i tid.</li>
 <li><strong>Begränsad tillgång till lån:</strong> Om din kreditprofil är svag kan långivare vara ovilliga att bevilja lån, vilket begränsar dina möjligheter. Detta kan skada din ekonomiska situation, särskilt vid akuta behov av likvida medel.</li>
