--- a/webblan/index.html
+++ b/webblan/index.html
@@ -179,7 +179,7 @@ Publicerat i <a href="https://lastoffer.net/category/snabblan/">snabblån</a>		<
 </div>
 <div class="row">
 <div class="cell right">
-<img fetchpriority="high" decoding="async" src="../media/2015/04/weblan..webp" alt="weblån" width="300" height="300" /></div>
+<img fetchpriority="high" decoding="async" src="../media/2015/04/weblan.webp" alt="weblån" width="300" height="300" /></div>
 </div>
 <div class="rw"></div>
 <section>
@@ -884,7 +884,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <h2>
 <div class="unskew">Kraften i webblån är flexibilitet</div>
 </h2>
-<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa..webp" alt="Förklaring för Weblån"></p>
+<div class="cell"><img decoding="async" style="width: 30px; height: 30px; margin: 5px;  padding: 10px; background: #e8e8e8;  border-radius: 100%/10px 10px 10px 10px;"  src="../media/glodlampa.webp" alt="Förklaring för Weblån"></p>
 <p>Vi vet att en brist på pengar kan uppstå plötsligt och det är därför viktigt att man har tillgång till snabba och lättillgängliga finansiella lösningar.  </p>
 <blockquote><p>Finansiering ska vara enkelt och snabb &#8211; som ett webblån</p></blockquote>
 <p> Därför har weblån blivit en populär väg för många svenskar som söker sätt att lösa sina ekonomiska utmaningar.       Genom att du använder dig av en digital plattform för ansökan och godkännande, elimineras behovet av tidskrävande bankbesök och pappersarbete. </p>
@@ -987,7 +987,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell positiv">
 <h3>Fördelar med Weblån</h3>
-<p><img decoding="async" src="../media/thumbs_up..webp" alt="Fördelar med Weblån"></p>
+<p><img decoding="async" src="../media/thumbs_up.webp" alt="Fördelar med Weblån"></p>
 <ul>
 <li>Snabb och enkel ansökningsprocess: Weblån kan oftast ansökas om direkt online, vilket eliminerar behovet av att besöka bankkontor. En digital ansökan gör att du kan få svar på din ansökan inom samma dag, vilket sparar både tid och energi.</li>
 <li>Flexibilitet med lånebelopp: Långivare erbjuder ofta olika lånebelopp, vilket innebär att du kan välja en summa som passar just dina behov. Detta gör det möjligt att anpassa lånet efter din ekonomiska situation, oavsett om du behöver ett litet belopp för en oväntad utgift eller mer för större projekt.</li>
@@ -1005,7 +1005,7 @@ kronor.</td><td colspan="2"><img loading="lazy" decoding="async" src="https://la
 <div class="row fornackdel">
 <div class="cell negativ">
 <h3>Nackdelar med Weblån</h3>
-<p><img decoding="async" src="../media/thumbs_down..webp" alt="Nackdelar med Weblån"></p>
+<p><img decoding="async" src="../media/thumbs_down.webp" alt="Nackdelar med Weblån"></p>
 <ul>
 <li>Höga räntor: En av de största nackdelarna med webblån är att de ofta har högre räntor jämfört med traditionella banklån. Detta beror på den ökade risk långivare tar, särskilt om låntagaren har svag kreditvärdighet.</li>
 <li>Korta återbetalningstider: Många webblån har korta återbetalningstider, vilket kan sätta press på låntagaren. Det kan bli en utmaning att hinna betala tillbaka lånet i tid, vilket kan leda till ytterligare skulder och avgifter.</li>
