--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	
 </head>  <body>  
 <header class="header">
-		   <a href="https://lastoffer.net" class="logo"><img alt="lastoffer.net" title="lastoffer.net" src="https://lastoffer.net/media/lnw97.png"></a>   
+		   <a href="https://lastoffer.net" class="logo"><img alt="lastoffer.net" title="lastoffer.net" src="https://lastoffer.net/media/lnw97.webp"></a>   
   </div>
 	
 			   	  	 
@@ -1090,7 +1090,7 @@ Vi börjar med att konstatera att lån med en svagare kreditvärdighet är speci
  </div> 	<div class="bajo">
 	
 	<div class="ft3"> 
- 	<p>  <a href="https://lastoffer.net"><img src="https://lastoffer.net/media/media/lnw97.png" width="80" height="82" alt="lastoffer.net"></a> </p>
+ 	<p>  <a href="https://lastoffer.net"><img src="https://lastoffer.net/media/lnw97.webp" width="80" height="82" alt="lastoffer.net"></a> </p>
 </div>
 		
 	</div></div>
